# messenger

./: .dockerignore  Cargo.toml  Dockerfile  README.md  config.yaml
.github/workflows/: rust.yml  rustfmt.yml
src/: lib.rs  main.rs
src/api/: handlers.rs  mod.rs
src/config/: mod.rs
src/models/: mod.rs  notifications.rs  send_notification_request.rs
src/providers/: errors.rs  mailgun.rs  mod.rs  notifications.rs  providers.rs
src/templates/: mod.rs  tera_engine.rs
src/templates_engines/: mod.rs  tera_engine.rs
src/tools/: mod.rs
templates/: hello_world.html
