[package]
name = "messenger"
version = "0.1.0"
edition = "2021"

[dependencies]
# Error handling
thiserror = "2.0.1"

# API
axum = "0.7.7"
hyper = { version = "1.5.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Asynchronous tasks
tokio = { version = "1", features = ["full"] }

# Config from yaml or configmap
config = "0.14.0"
serde_yaml = "0.9.34+deprecated"

# HTTP calls
reqwest = "0.12.9"

# Logging
tracing = "0.1.26"
tracing-subscriber = "0.3"

# Template
tera = "1.0.0"

# Testing
tokio-test = "0.4.0"
tempfile = "3.14.0"